--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Hello Git World, I made it!</h1>
+        <h2>I finished this activity!</h2>
     </body>
 </html>
